--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.dl7.myapp.ui.home.MainActivity">
+    tools:context="com.dl7.myapp.module.home.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
