--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.dl7.myapp.ui.home.MainActivity"
+    tools:context="com.dl7.myapp.module.home.MainActivity"
     tools:showIn="@layout/app_bar_home">
 
     <TextView
