更新新闻列表

--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <!--<com.dl7.myapp.view.EmptyLayout-->
-        <!--android:id="@+id/empty_layout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
+    <com.dl7.myapp.view.EmptyLayout
+        android:id="@+id/empty_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
