更新新闻列表界面

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,5 +17,6 @@
 
     <!-- News List -->
     <dimen name="news_icon_width">100dp</dimen>
-    <dimen name="news_icon_height">70dp</dimen>
+    <dimen name="news_icon_height">75dp</dimen>
+    <dimen name="news_ads_height">180dp</dimen>
 </resources>
