--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,7 @@
     <dimen name="news_icon_width">100dp</dimen>
     <dimen name="news_icon_height">75dp</dimen>
     <dimen name="news_ads_height">180dp</dimen>
+
+    <!-- News Detail-->
+    <dimen name="related_news_height">310dp</dimen>
 </resources>
