--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,22 @@
         <!--<item name="android:windowBackground">@color/window_background</item>-->
     </style>
 
+    <style name="news_title">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Headline</item>
+    </style>
+
+    <style name="news_content">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
+    </style>
+
+    <style name="special_text">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/special_text</item>
+    </style>
+
+    <style name="topic_name">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
 </resources>
