--- a/app/src/main/res/layout/activity_special.xml
+++ b/app/src/main/res/layout/activity_special.xml
@@ -10,8 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/toolbar_margin_top"
+        android:layout_height="@dimen/app_bar_height"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <!--
@@ -26,40 +25,32 @@
             android:layout_height="match_parent"
             app:contentScrim="@color/colorPrimary"
             app:expandedTitleMarginStart="0dp"
+            app:expandedTitleGravity="bottom|center_horizontal"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
                 android:id="@+id/iv_banner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
                 app:layout_collapseParallaxMultiplier="0.6"
                 app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/tool_bar"
                 android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/toolbar_margin_top"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"/>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <!-- 遮挡状态栏透明的部分 -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_news_list"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_margin_top"
-        android:background="?attr/colorPrimary"/>
-
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:paddingBottom="@dimen/toolbar_margin_top"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <!-- 滚动的内容 -->
-        <include layout="@layout/layout_news_content"/>
-    </android.support.v4.widget.NestedScrollView>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_height="match_parent"/>
 
     <com.dl7.myapp.views.EmptyLayout
         android:id="@+id/empty_layout"
@@ -79,5 +70,5 @@
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|right"
         android:layout_margin="16dp"
-        android:src="@mipmap/ic_clear_white_24dp"/>
+        android:src="@mipmap/ic_favorite_white_24dp"/>
 </android.support.design.widget.CoordinatorLayout>
