--- a/app/src/main/res/layout/head_special.xml
+++ b/app/src/main/res/layout/head_special.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -24,5 +23,4 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
-
-</LinearLayout>
+</FrameLayout>
