添加图集界面

--- a/app/src/main/res/layout/layout_toolbar_transparent.xml
+++ b/app/src/main/res/layout/layout_toolbar_transparent.xml
@@ -5,5 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/toolbar_height"
+    android:layout_marginTop="@dimen/toolbar_margin_top"
     android:background="@android:color/transparent"
     app:theme="@style/AppTheme.AppBarOverlay"/>
