--- a/app/src/main/res/layout/adapter_news_list.xml
+++ b/app/src/main/res/layout/adapter_news_list.xml
@@ -11,6 +11,15 @@
         android:layout_width="@dimen/news_icon_width"
         android:layout_height="@dimen/news_icon_height"/>
 
+    <com.flyco.labelview.LabelView
+        android:id="@+id/label_view"
+        xmlns:lv="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        lv:lv_fill_triangle="true"
+        lv:lv_text_size="11sp"/>
+
     <TextView
         android:id="@+id/tv_title"
         android:text="里约奥运会"
