--- a/app/src/main/res/layout/adapter_news_photo_set.xml
+++ b/app/src/main/res/layout/adapter_news_photo_set.xml
@@ -1,65 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_title"
-        android:text="里约奥运会"
-        android:maxLines="1"
-        android:layout_margin="10dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="10dp"
+        android:maxLines="1"
+        android:text="里约奥运会"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
+    <com.flyco.labelview.LabelView
+        xmlns:lv="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        lv:lv_text="图集"
+        lv:lv_fill_triangle="true"
+        lv:lv_background_color="#5677fc"
+        lv:lv_text_size="11sp"/>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/ll_item_icons"
+        android:layout_below="@+id/tv_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_icon_1"
-            android:src="@mipmap/icon_default"
-            android:layout_marginLeft="10dp"
             android:layout_width="0dp"
+            android:layout_height="@dimen/news_icon_height"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
-            android:layout_height="@dimen/news_icon_height"/>
+            android:src="@mipmap/icon_default"/>
 
         <ImageView
             android:id="@+id/iv_icon_2"
-            android:src="@mipmap/icon_default"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/news_icon_height"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="@dimen/news_icon_height"/>
+            android:src="@mipmap/icon_default"/>
 
         <ImageView
             android:id="@+id/iv_icon_3"
-            android:src="@mipmap/icon_default"
-            android:layout_marginRight="10dp"
             android:layout_width="0dp"
+            android:layout_height="@dimen/news_icon_height"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:layout_height="@dimen/news_icon_height"/>
+            android:src="@mipmap/icon_default"/>
     </LinearLayout>
 
     <FrameLayout
+        android:layout_below="@+id/ll_item_icons"
         android:layout_width="match_parent"
-        android:layout_margin="10dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
         <TextView
-            android:text="图集"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:id="@+id/tv_source"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="网易原创"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
 
         <TextView
             android:id="@+id/tv_time"
-            android:layout_gravity="right"
-            android:text="2016-08-23 11:48:46"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="2016-08-23 11:48:46"/>
     </FrameLayout>
-</LinearLayout>
+</RelativeLayout>
