--- a/app/src/main/res/layout/activity_photo_set.xml
+++ b/app/src/main/res/layout/activity_photo_set.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/black"
+    android:orientation="vertical"
     tools:context="com.dl7.myapp.module.photo.PhotoSetActivity">
 
     <android.support.v4.view.ViewPager
@@ -14,6 +14,48 @@
         android:layout_height="match_parent"/>
 
     <include layout="@layout/layout_toolbar_transparent"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_gravity="bottom"
+        android:layout_height="@dimen/photo_set_desc_height"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_title"
+                style="@style/photo_main"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/tv_cur_index"
+                style="@style/photo_main"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tv_photo_sum"
+                style="@style/photo_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </android.support.v4.widget.NestedScrollView>
+    </LinearLayout>
 
     <com.dl7.myapp.views.EmptyLayout
         android:id="@+id/empty_layout"
