--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,4 +54,11 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
+
+
+
+    <declare-styleable name="ScrollOverLayout">
+        <attr name="layout_height" format="dimension"/>
+        <attr name="fix_height" format="dimension"/>
+    </declare-styleable>
 </resources>
