添加栏目管理界面

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header_home"/>
+        app:headerLayout="@layout/nav_header_home"
+        app:menu="@menu/nav_drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
