--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,6 +55,11 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="manage_title">
+        <item name="android:textSize">14sp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@color/divider_line</item>
+    </style>
 
 
     <declare-styleable name="ScrollOverLayout">
