--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="BaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="BaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:fitsSystemWindows">false</item>
@@ -24,6 +24,7 @@
         <!--分割线颜色-->
         <!--<item name="android:divider">@color/divider_line</item>-->
         <!--<item name="android:windowBackground">@color/window_background</item>-->
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
 
     <style name="news_title">
@@ -58,7 +59,7 @@
     <style name="manage_title">
         <item name="android:textSize">14sp</item>
         <item name="android:padding">10dp</item>
-        <item name="android:background">@color/divider_line</item>
+        <!--<item name="android:background">@color/divider_line</item>-->
     </style>
 
 
