--- a/app/src/main/res/layout/adapter_manage.xml
+++ b/app/src/main/res/layout/adapter_manage.xml
@@ -1,23 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:id="@+id/card_view"
+<TextView
+    android:id="@+id/tv_channel_name"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:foreground="?android:attr/selectableItemBackground"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="2dp"
-    card_view:cardUseCompatPadding="true">
-
-    <TextView
-        android:id="@+id/tv_channel_name"
-        android:text="暴雪"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_margin="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-</android.support.v7.widget.CardView>
+    android:layout_margin="8dp"
+    android:padding="5dp"
+    android:background="@drawable/shape_channel_normal"
+    android:gravity="center"
+    android:text="暴雪"/>
