--- a/app/src/main/res/layout/activity_special.xml
+++ b/app/src/main/res/layout/activity_special.xml
@@ -5,10 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.dl7.myapp.module.special.SpecialActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
+        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -21,6 +23,7 @@
         -->
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_tool_bar"
+            android:fitsSystemWindows="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:contentScrim="@color/colorPrimary"
