--- a/app/src/main/res/layout/activity_photo_set.xml
+++ b/app/src/main/res/layout/activity_photo_set.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/black"
     android:orientation="vertical"
-    tools:context="com.dl7.myapp.module.photo.PhotoSetActivity">
+    tools:context="com.dl7.myapp.module.photoset.PhotoSetActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_photo"
