添加图片界面

--- a/app/src/main/res/layout/activity_photos.xml
+++ b/app/src/main/res/layout/activity_photos.xml
@@ -7,15 +7,8 @@
     android:layout_height="match_parent"
     tools:openDrawer="start">
 
-    <include layout="@layout/activity_main"/>
+    <include layout="@layout/layout_photos"/>
 
     <include layout="@layout/nav_layout"/>
-    <!--<android.support.design.widget.NavigationView-->
-    <!--android:id="@+id/nav_view"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_gravity="start"-->
-    <!--app:headerLayout="@layout/nav_header_home"-->
-    <!--app:menu="@menu/nav_drawer"/>-->
 
 </android.support.v4.widget.DrawerLayout>
