--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -3,12 +3,12 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="图片专栏"/>
+            android:id="@+id/nav_news"
+            android:icon="@mipmap/ic_insert_drive_file_white_18dp"
+            android:title="新闻"/>
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="频道设置"/>
+            android:id="@+id/nav_photos"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="图片"/>
     </group>
 </menu>
