添加美女图片界面

--- a/app/src/main/res/layout/adapter_photo_list.xml
+++ b/app/src/main/res/layout/adapter_photo_list.xml
@@ -53,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:layout_height="wrap_content"/>
