--- a/app/src/main/res/layout/adapter_beauty_photo.xml
+++ b/app/src/main/res/layout/adapter_beauty_photo.xml
@@ -17,7 +17,7 @@
 
         <ImageView
             android:id="@+id/iv_photo"
-            android:src="@mipmap/photo_default"
+            android:src="@mipmap/icon_default"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
