更新专题界面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="collapsed_title">#ffffff</color>
 
     <color name="photo_set_bg">#44000000</color>
+
+    <color name="item_special_bg">#FF4081</color>
+    <color name="item_photo_set_bg">#5677fc</color>
 </resources>
