--- a/app/src/main/res/layout/activity_special.xml
+++ b/app/src/main/res/layout/activity_special.xml
@@ -1,61 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context="com.dl7.myapp.module.special.SpecialActivity">
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
-        android:fitsSystemWindows="true"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <!--
-        CollapsingToolbarLayout会去获取Toolbar的高度设为minHeight
-        app:layout_collapseMode="parallax":视差模式，在折叠的时候会有个视差折叠的效果;
-        app:layout_collapseMode="pin":固定模式，在折叠的时候最后固定在顶端;
-        app:layout_collapseParallaxMultiplier:设置视差滚动系数[0~1],0:则无视差滚动;1:最大视差相当于直接覆盖;
-        -->
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_tool_bar"
-            android:fitsSystemWindows="true"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:contentScrim="@color/colorPrimary"
-            app:expandedTitleMarginStart="0dp"
-            app:expandedTitleGravity="bottom|center_horizontal"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
-
-            <ImageView
-                android:id="@+id/iv_banner"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_collapseParallaxMultiplier="0.6"
-                app:layout_collapseMode="parallax"/>
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/tool_bar"
-                android:layout_width="match_parent"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"/>
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_news_list"
+        android:layout_marginTop="@dimen/toolbar_margin_top"
         android:layout_width="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_height="match_parent"/>
+
+    <include layout="@layout/layout_toolbar_transparent"/>
 
     <com.dl7.myapp.views.EmptyLayout
         android:id="@+id/empty_layout"
-        android:layout_marginTop="@dimen/tab_bar_margin_top"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</android.support.design.widget.CoordinatorLayout>
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/tab_bar_margin_top"/>
+</FrameLayout>
+
