--- a/app/src/main/res/layout/activity_special.xml
+++ b/app/src/main/res/layout/activity_special.xml
@@ -5,21 +5,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.dl7.myapp.module.special.SpecialActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_news_list"
-        android:layout_marginTop="@dimen/toolbar_margin_top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <include layout="@layout/layout_toolbar_transparent"/>
-
-    <com.dl7.myapp.views.EmptyLayout
-        android:id="@+id/empty_layout"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/tab_bar_margin_top"/>
+        android:layout_height="@dimen/toolbar_height"
+        android:background="@android:color/transparent"
+        app:theme="@style/AppTheme.AppBarOverlay"/>
+
+    <include layout="@layout/layout_common_empty"/>
 </FrameLayout>
 
