--- a/app/src/main/res/layout/activity_big_photo.xml
+++ b/app/src/main/res/layout/activity_big_photo.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     app:mode="animate"
     tools:context="com.dl7.myapp.module.bigphoto.BigPhotoActivity">
 
@@ -16,7 +17,9 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:background="@color/photo_set_bg"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -24,34 +27,35 @@
             android:id="@+id/iv_favorite"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@mipmap/ic_favorite_border_white_24dp"/>
+            android:layout_height="22dp"
+            android:src="@drawable/sel_btn_love"/>
 
         <ImageView
             android:id="@+id/iv_download"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@mipmap/ic_file_download_white_24dp"/>
+            android:src="@drawable/sel_btn_download"/>
 
         <ImageView
             android:id="@+id/iv_praise"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@mipmap/ic_thumb_up_white_24dp"/>
+            android:layout_height="22dp"
+            android:src="@drawable/sel_btn_praise"/>
 
         <ImageView
             android:id="@+id/iv_share"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@mipmap/ic_share_white_24dp"/>
+            android:layout_height="22dp"
+            android:src="@mipmap/btn_share"/>
     </LinearLayout>
 
     <include layout="@layout/layout_toolbar_transparent"/>
+
+    <com.dl7.myapp.views.EmptyLayout
+        android:id="@+id/empty_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </com.dl7.drag.DragSlopLayout>
