--- a/app/src/main/res/layout/layout_custom_toolbar.xml
+++ b/app/src/main/res/layout/layout_custom_toolbar.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center">
 
-    <ImageView
-        android:id="@+id/iv_channel"
+    <FrameLayout
+        android:id="@+id/fl_layout"
         android:layout_gravity="right|center_horizontal"
-        android:src="@mipmap/ic_playlist_add_white_24dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="15dp"
         android:padding="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/iv_love"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:background="@mipmap/btn_love"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textSize="10sp"/>
+    </FrameLayout>
 </FrameLayout>
