--- a/app/src/main/res/layout/activity_big_photo.xml
+++ b/app/src/main/res/layout/activity_big_photo.xml
@@ -27,7 +27,8 @@
             android:id="@+id/iv_favorite"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="22dp"
+            android:layout_height="30dp"
+            android:padding="5dp"
             android:src="@drawable/sel_btn_love"/>
 
         <ImageView
@@ -41,14 +42,16 @@
             android:id="@+id/iv_praise"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="22dp"
+            android:layout_height="30dp"
+            android:padding="5dp"
             android:src="@drawable/sel_btn_praise"/>
 
         <ImageView
             android:id="@+id/iv_share"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="22dp"
+            android:layout_height="30dp"
+            android:padding="5dp"
             android:src="@mipmap/btn_share"/>
     </LinearLayout>
 
