--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <SwitchPreference
-        android:defaultValue="false"
-        android:title="无图模式"
-        android:key="setting_no_image"
-        android:summary="开启后在非Wifi下不加载图片"/>
+    <PreferenceCategory
+        android:title="系统设置">
 
-    <Preference
-        android:title="设置图片保存路径">
-        <intent android:action="android.intent.action.VIEW"
-                android:data="http://www.baidu.com" />
-    </Preference>
+        <SwitchPreference
+            android:defaultValue="false"
+            android:title="无图模式"
+            android:key="setting_no_image"
+            android:summary="开启后在非Wifi下不加载图片"/>
 
-    <com.github.angads25.filepicker.view.FilePickerPreference
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:key="setting_save_path"
-        android:title="设置图片保存路径"
-        android:defaultValue="/sdcard:/mnt"
-        app:error_dir="/mnt"
-        app:root_dir="/sdcard"
-        app:selection_type="dir_select"/>
+        <com.dl7.myapp.views.XFilePickerPreference
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:key="setting_save_path"
+            android:title="设置图片保存路径"
+            android:defaultValue="NewsApp"
+            android:summary="/sdcard:/NewsApp:"
+            app:extensions="txt:pdf:"/>
+    </PreferenceCategory>
+
 </PreferenceScreen>
